Switch to Mic_Theme and add post covers

--- a/source/_posts/深度学习/扩散/何凯明让扩散模型回归“去噪”本质.md
+++ b/source/_posts/深度学习/扩散/何凯明让扩散模型回归“去噪”本质.md
@@ -8,6 +8,7 @@ tags:
 categories:
   - "深度学习"
   - "扩散"
+thumbnail: /img/covers/cover4.jpg
 ---
 # 让扩散模型回归“去噪”本质 
 论文标题: Back to Basics: Let Denoising Generative Models Denoise
